css/main.css
/* ... */
@media (min-width: 768px) { .section .btn-heatmaps i { width: 24px; height: 24px; margin: 0 3px 0 5px; line-height: 24px; } }

@media (min-width: 1200px) { .section .btn-heatmaps i { width: 30px; height: 30px; font-size: 12px; line-height: 30px; background: #a01a60; margin: 0 4px; } }

.section .btn-heatmaps:hover, .section .btn-heatmaps:focus { opacity: .9; color: #005689; }

@media (min-width: 768px) { .section .btn-heatmaps:hover, .section .btn-heatmaps:focus { opacity: 1; } }

.section .btn-go { font-size: 0px; line-height: 0px; color: transparent; text-shadow: none; background-color: transparent; border: 0; width: 24px; height: 40px; display: inline-block; vertical-align: top; border: 2px solid #fff; position: relative; border-radius: 15px; }

.section .btn-go:after { position: absolute; left: 50%; top: 7px; right: auto; bottom: auto; background: #fff; content: ""; width: 2px; margin: 0 0 0 -1px; height: 10px; border-radius: 2px; }

.section .paging { display: inline-block; vertical-align: top; font-size: 14px; line-height: 18px; border-bottom: 2px solid #fff; padding: 0 6px 4px 0; margin: 0 -8px 10px -9px; letter-spacing: -.32em; min-width: 65px; }

@media (min-width: 992px) { .section .paging { margin-bottom: 15px; padding-bottom: 7px; min-width: 79px; } }

.section .paging li { display: inline-block; vertical-align: top; padding: 0 8px 4px 9px; letter-spacing: 0; color: rgba(255, 255, 255, 0.3); cursor: pointer; }

.section .paging li:hover, .section .paging li:focus, .section .paging li.active { color: #fff; }

.section .info { position: absolute; left: 80px; top: auto; right: 20px; bottom: 40px; z-index: 70; }

@media (min-width: 992px) { .section .info { right: 40px; left: 100px; } }

.section .info .indicators { font-size: 14px; line-height: 18px; overflow: hidden; margin: 0 0 2px; }

.section .info .indicators .title { display: block; overflow: hidden; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; padding: 3px 10px 3px 0; }

@media (min-width: 768px) { .section .info .indicators .title { padding: 3px 22px 3px 0; } }

.section .info .indicators ul { display: inline-block; vertical-align: top; letter-spacing: -.32em; margin: 0 -5px; float: right; max-width: 50%; white-space: nowrap; }

.section .info .indicators ul li { font-size: 0px; line-height: 0px; color: transparent; text-shadow: none; background-color: transparent; border: 0; display: inline-block; vertical-align: middle; width: 10px; height: 10px; margin: 5px 5px 4px; border-radius: 50%; background: #ffff7c; }

.section .info .indicators ul li.dark-yellow { background: #ffe768; }

.section .info .indicators ul li.orange { background: #ffb56b; }

.section .info .indicators ul li.red { background: #f25d58; }

.section .info .btn-area { overflow: hidden; margin: 0 -10px; letter-spacing: -.32em; }

.section .info .btn-area .btn { min-width: 70px; margin: 0 10px; letter-spacing: 0; max-width: 40%; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }

.section .article { position: relative; letter-spacing: -.32em; padding: 35px 0 35px; }

@media (min-width: 768px) { .section .article { padding-top: 50px; padding-bottom: 50px; } }

@media (min-width: 992px) { .section .article { padding-top: 82px; padding-bottom: 60px; } }

.section .article:before { position: absolute; left: 10%; top: 0; right: -20px; bottom: 0; background: #fff; z-index: -1; display: block; content: ""; }

@media (min-width: 768px) { .section .article:before { right: 4%; left: 10%; } }

@media (min-width: 992px) { .section .article:before { left: 17%; right: 8.6%; } }

.section .article > * { letter-spacing: 0; }

@media (min-width: 992px) { .section .article h1 { margin: 0 0 28px; } }

@media (min-width: 1200px) { .section .article .btn { min-width: 250px; } }

.section .article .text-holder { padding: 0 0 20px; }

.section .article .text-holder:only-child { width: 90%; }

@media (min-width: 768px) { .section .article .text-holder { display: inline-block; vertical-align: middle; padding: 0 0 0 5%; width: calc(100% - 220px); } }

@media (min-width: 992px) { .section .article .text-holder { width: calc(100% - 270px); padding: 0 0 0 8.6%; } }

.section .article .img-responsive { margin: 0 0 0 calc(10% + 20px); }

@media (min-width: 768px) { .section .article .img-responsive { display: inline-block; vertical-align: middle; width: 200px; margin: 0 0 0 20px; } }

@media (min-width: 992px) { .section .article .img-responsive { margin: 0 0 0 20px; width: 250px; } }

.section .article .img-responsive img { max-width: 100%; display: block; height: auto; margin: 0 auto; box-shadow: 0 6px 16px rgba(48, 71, 109, 0.3); }

@media (min-width: 992px) { .section .article .img-responsive img { box-shadow: 0 10px 20px rgba(48, 71, 109, 0.3); } }

@media (max-width: 767px) { .section .graph { height: auto !important; } }

@media (min-width: 768px) { .section .graph { white-space: nowrap; }
  .section .graph:after { content: ''; display: inline-block; vertical-align: middle; width: 0; min-height: 100%; }
  .section .graph > * { white-space: normal; display: inline-block; vertical-align: top; max-width: 100%; } }

/* section inverse styles */
.section.inverse { color: #005689; }

.section.inverse:last-child:before { display: none; }

.section.inverse:before { position: absolute; left: 0; top: auto; right: 0; bottom: 0; height: 1px; content: ""; z-index: 80; background: rgba(49, 71, 109, 0.3); }

.section.inverse h1, .section.inverse h2 { color: #005689; }

.section.inverse .paging { border-bottom-color: #005689; }

.section.inverse .paging li { color: rgba(0, 86, 137, 0.3); }

.section.inverse .paging li:hover, .section.inverse .paging li:focus, .section.inverse .paging li.active { color: #005689; }

/* section intro styles */
.section.intro:after { vertical-align: bottom; }

.section.intro .section-holder { vertical-align: bottom; padding-bottom: 27px; padding-top: 85px; }
/* ... */

